src/np222kk/dv507/a2/test/cases/negative/test_equals_01.ofp
void main() {
    if ("abc" == "abc") {  }
}